// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs/

Project piasir_rodrigoalvarez_saraygonzalez {
  database_type: 'PostgreSQL 16'
  Note: 'Diseño e implementación de una arquitectura híbrida de base de datos PostgreSQL en Linux con replicación, copias de seguridad y recuperación ante fallos'
}

Enum estado_cita {
  pendiente
  confirmada
  cancelada
  completada
}

Enum estado_prueba {
  solicitada
  programada
  realizada
  cancelada
}

Enum estado_tratamiento {
  activo
  finalizado
  suspendido
}

Enum estado_factura {
  pendiente
  pagada
  anulada
}

Enum metodo_pago {
  efectivo
  tarjeta
  transferencia
  seguro
  pendiente
}

Table clinicas {
  id_clinica int [pk, increment]
  nombre varchar(100) [not null, unique]
  direccion varchar(200) [not null]
  telefono varchar(15)
  email varchar(120)
  abierta boolean [not null, default: true]
  creado_en timestamp [not null, default: `now()`]
}

Table aseguradoras {
  id_aseguradora int [pk, increment]
  nombre varchar(100) [not null, unique]
  telefono varchar(15)
  email varchar(120)
}

Table pacientes {
  id_paciente int [pk, increment]
  numero_historia varchar(20) [not null, unique]
  dni varchar(12) [not null, unique]
  nombre varchar(80) [not null]
  apellidos varchar(120) [not null]
  fecha_nacimiento date [not null]
  sexo varchar(15)
  telefono varchar(15)
  email varchar(120)
  direccion varchar(200)
  id_aseguradora int [ref: > aseguradoras.id_aseguradora]
  numero_poliza varchar(30)
  fecha_alta date [not null, default: `current_date`]
  creado_en timestamp [not null, default: `now()`]
}

Table especialidades {
  id_especialidad int [pk, increment]
  nombre varchar(100) [not null, unique]
}

Table medicos {
  id_medico int [pk, increment]
  id_especialidad int [not null, ref: > especialidades.id_especialidad]
  nombre varchar(80) [not null]
  apellidos varchar(120) [not null]
  num_colegiado varchar(20) [not null, unique]
  telefono varchar(15)
  email varchar(120) [unique]
  activo boolean [not null, default: true]
  creado_en timestamp [not null, default: `now()`]
}

Table medicos_clinicas {
  id_medico_clinica int [pk, increment]
  id_medico int [not null, ref: > medicos.id_medico]
  id_clinica int [not null, ref: > clinicas.id_clinica]
  es_principal boolean [not null, default: false]
  fecha_inicio date [not null, default: `current_date`]
  fecha_fin date
}

Table clinicas_especialidades {
  id_clinica_especialidad int [pk, increment]
  id_clinica int [not null, ref: > clinicas.id_clinica]
  id_especialidad int [not null, ref: > especialidades.id_especialidad]
  disponible boolean [not null, default: true]
}

Table citas {
  id_cita int [pk, increment]
  id_paciente int [not null, ref: > pacientes.id_paciente]
  id_medico int [not null, ref: > medicos.id_medico]
  id_clinica int [not null, ref: > clinicas.id_clinica]
  fecha_hora timestamp [not null]
  motivo varchar(200) [not null]
  estado estado_cita [not null, default: 'pendiente']
  creado_en timestamp [not null, default: `now()`]
}

Table consultas {
  id_consulta int [pk, increment]
  id_cita int [not null, unique, ref: > citas.id_cita]
  fecha_consulta timestamp [not null, default: `now()`]
  motivo_consulta varchar(200)
  observaciones_generales text
}

Table diagnosticos {
  id_diagnostico int [pk, increment]
  id_consulta int [not null, unique, ref: > consultas.id_consulta]
  sintomas text
  descripcion_diagnostico varchar(200) [not null]
  observaciones text
  fecha_diagnostico timestamp [not null, default: `now()`]
  creado_en timestamp [not null, default: `now()`]
}

Table tratamientos {
  id_tratamiento int [pk, increment]
  nombre varchar(120) [not null, unique]
  descripcion text
  precio_base decimal(10,2)
  activo boolean [not null, default: true]
}

Table tratamientos_disponibles {
  id_tratamiento_disponible int [pk, increment]
  id_clinica int [not null, ref: > clinicas.id_clinica]
  id_tratamiento int [not null, ref: > tratamientos.id_tratamiento]
  disponible boolean [not null, default: true]
}

Table tratamientos_administrados {
  id_tratamiento_administrado int [pk, increment]
  id_consulta int [not null, ref: > consultas.id_consulta]
  id_tratamiento int [not null, ref: > tratamientos.id_tratamiento]
  fecha_inicio date [not null, default: `current_date`]
  fecha_fin date
  indicaciones text
  estado estado_tratamiento [not null, default: 'activo']
  observaciones text
  creado_en timestamp [not null, default: `now()`]
}

Table pruebas {
  id_prueba int [pk, increment]
  nombre varchar(120) [not null, unique]
  descripcion text
  precio_base decimal(10,2)
  activo boolean [not null, default: true]
}

Table pruebas_disponibles {
  id_prueba_disponible int [pk, increment]
  id_clinica int [not null, ref: > clinicas.id_clinica]
  id_prueba int [not null, ref: > pruebas.id_prueba]
  disponible boolean [not null, default: true]
}

Table pruebas_realizadas {
  id_prueba_realizada int [pk, increment]
  id_consulta int [not null, ref: > consultas.id_consulta]
  id_prueba int [not null, ref: > pruebas.id_prueba]
  fecha_solicitud date [not null, default: `current_date`]
  fecha_resultado date
  estado estado_prueba [not null, default: 'solicitada']
  resultado_resumen text
  observaciones text
  creado_en timestamp [not null, default: `now()`]
}

Table facturas {
  id_factura int [pk, increment]
  numero_factura varchar(30) [not null, unique]
  id_paciente int [not null, ref: > pacientes.id_paciente]
  id_clinica int [not null, ref: > clinicas.id_clinica]
  fecha_emision date [not null, default: `current_date`]
  total decimal(10,2) [not null, default: 0]
  estado estado_factura [not null, default: 'pendiente']
  metodo_pago metodo_pago
  creado_en timestamp [not null, default: `now()`]
}

Table factura_detalle {
  id_detalle int [pk, increment]
  id_factura int [not null, ref: > facturas.id_factura]
  id_consulta int [ref: > consultas.id_consulta]
  id_prueba_realizada int [ref: > pruebas_realizadas.id_prueba_realizada]
  id_tratamiento_administrado int [ref: > tratamientos_administrados.id_tratamiento_administrado]
  concepto varchar(200) [not null]
  cantidad int [not null, default: 1]
  precio_unitario decimal(10,2) [not null]
  subtotal decimal(10,2) [not null]
}